--- a/index.html
+++ b/index.html
@@ -14,31 +14,31 @@
         <label for="nota1"> Contabilidad:</label>
         <input type="number" id="nota1" name="nota1" required /><br />
 
-        <label for="nota2">Matematicas Financiera:</label>
+        <label for="nota2">Matemáticas Financiera:</label>
         <input type="number" id="nota2" name="nota2" required /><br /><br />
 
-        <label for="nota3">Filosofia:</label>
+        <label for="nota3">Filosofía:</label>
         <input type="number" id="nota3" name="nota3" required /><br /><br />
 
-        <label for="nota4">Ingles:</label>
+        <label for="nota4">Inglés:</label>
         <input type="number" id="nota4" name="nota4" required /><br /><br />
 
         <label for="nota5">Español:</label>
         <input type="number" id="nota5" name="nota5" required /><br /><br />
 
-        <label for="nota6">Administracion General:</label>
+        <label for="nota6">Administración General:</label>
         <input type="number" id="nota6" name="nota6" required /><br /><br />
 
-        <label for="nota7">Gestion Empresarial:</label>
+        <label for="nota7">Gestión Empresarial:</label>
         <input type="number" id="nota7" name="nota7" required /><br /><br />
 
-        <label for="nota8">Economia:</label>
+        <label for="nota8">Economía:</label>
         <input type="number" id="nota8" name="nota8" required /><br /><br />
         
-        <label for="nota9">Legislacion Mercantil:</label>
+        <label for="nota9">Legislación Mercantil:</label>
         <input type="number" id="nota9" name="nota9" required /><br /><br />
 
-        <label for="nota10">Apreciacion Artistica:</label>
+        <label for="nota10">Apreciación Artística:</label>
         <input type="number" id="nota10" name="nota10" required /><br /><br />
 
         <button type="button" onclick="calcularPromedio()">
